--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
     },
     "dependencies": {
         "@google/genai": "^1.30.0",
-        "react-dom": "^19.2.0",
         "lucide-react": "^0.555.0",
-        "react": "^19.2.0",
         "next": "^16.0.6",
-        "tailwindcss": "^4.1.17"
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0"
     },
     "devDependencies": {
         "@types/node": "^22.14.0",
         "@vitejs/plugin-react": "^5.0.0",
         "typescript": "~5.8.2",
-        "vite": "^6.2.0",
-        "autoprefixer": "^10.4.20",
-        "postcss": "^8.4.35"
+        "vite": "^6.2.0"
     }
 }
